# Store

./: .gitignore  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0003_alter_user_managers_remove_user_username_and_more.py
core/: settings.py  storages.py  urls.py
fixtures/: category_fixtures.json  m2m.py  order_fixtures.json  product_attributes_fixtures.json  product_attributes_values_fixtures.json  products_and_variants_fixtures.json  store_fixtures.json
orders/: bag.py  urls.py  views.py
payment/: urls.py  views.py
static/: staticfiles.json
static/css/: input.css  output.css  styles.css
static/js/: script.js
store/: admin.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0008_remove_product_thumbnail_alter_category_cover_and_more.py  0009_remove_order_is_completed_order_address_and_more.py  0010_productattribute_alter_category_cover_and_more.py  0011_alter_productvariant_attributes_productvariantimage_and_more.py  0012_alter_product_date_added.py  0013_alter_category_cover_alter_product_cover.py  0014_alter_orderproduct_price_alter_product_price_and_more.py
templates/: base.html
templates/accounts/: sign_in.html  sign_up.html
templates/admin/: index.html
templates/components/: category-card.html  footer.html  navigation.html  product-card.html  sidebar.html
templates/orders/: bag_summary.html  order_address.html  view_orders.html
templates/payment/: checkout.html
templates/store/: categories.html  explore.html  home.html  (+5 more)
